@@ -644,8 +644,12 @@ slurm_cred_create(slurm_cred_ctx_t ctx, slurm_cred_arg_t *arg)
 #ifndef HAVE_BG
 	{
 		int i, sock_recs = 0;
+#ifndef HAVE_CRAY
+		/* Zero compute node allocations allowed on a Cray for use
+		 * of front-end nodes */
 		xassert(arg->job_nhosts);
-		for (i=0; i<arg->job_nhosts; i++) {
+#endif
+		for (i = 0; i < arg->job_nhosts; i++) {
 			sock_recs += arg->sock_core_rep_count[i];
 			if (sock_recs >= arg->job_nhosts)
 				break;
